V3085: Add Silo + Screw before DCEs

--- a/Prevu.Synoptics.V3085_Anviplas/OverallView.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/OverallView.xaml
@@ -50,10 +50,10 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Canvas.Left="7571" Canvas.Top="1380" PipeHeight="Medium" Width="284" StatusComponent="544-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Canvas.Left="7566" Canvas.Top="2698" PipeHeight="Medium" Width="169" StatusComponent="564-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Canvas.Left="7726" Canvas.Top="1777" PipeHeight="Medium" Width="223" StatusComponent="564-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Canvas.Left="7676" Canvas.Top="1549" PipeHeight="Medium" Width="348" RenderTransformOrigin="0.5,0.5" StatusComponent="544-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe Canvas.Left="7701" Canvas.Top="1423" PipeHeight="Medium" Width="134" StatusComponent="544-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Canvas.Left="7706" Canvas.Top="2742" PipeHeight="Medium" Width="129" StatusComponent="564-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Canvas.Left="7826" Canvas.Top="1781" PipeHeight="Medium" Width="209" StatusComponent="564-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Canvas.Left="7673" Canvas.Top="1575" PipeHeight="Medium" Width="314" RenderTransformOrigin="0.5,0.5" StatusComponent="544-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -63,7 +63,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Canvas.Left="7265" Canvas.Top="2238" PipeHeight="Medium" Width="930" RenderTransformOrigin="0.5,0.5" StatusComponent="564-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe Canvas.Left="7346" Canvas.Top="2261" PipeHeight="Medium" Width="968" RenderTransformOrigin="0.5,0.5" StatusComponent="564-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -237,7 +237,7 @@
     </Labels:Pipe>
     <Labels:Pipe Canvas.Left="5877" Canvas.Top="1986" Width="203" Color="Water" StatusComponent="482-21-CV1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Canvas.Left="5550" Canvas.Top="1986" Width="299" Color="Water" StatusComponent="482-21-CV1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Canvas.Left="5018" Canvas.Top="2240" Width="1267" Color="Water" StatusComponent="529-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Canvas.Left="5018" Canvas.Top="2389" Width="1522" Color="Water" StatusComponent="529-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
     <Labels:Pipe Canvas.Left="3867" Canvas.Top="1065" Width="494" Color="Water" StatusComponent="431-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Canvas.Left="3886" Canvas.Top="1085" Width="495" Color="Water" StatusComponent="432-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
@@ -266,7 +266,7 @@
     <Labels:Pipe Canvas.Left="5167" Canvas.Top="1358" Width="778" Color="Water" StatusComponent="529-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Canvas.Left="5965" Canvas.Top="1358" Width="78" Color="Water" StatusComponent="529-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Canvas.Left="5965" Canvas.Top="1358" Width="78" Color="Water" StatusComponent="529-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-    <Labels:Pipe Canvas.Left="5819" Canvas.Top="1139" Width="442" Color="Water" StatusComponent="529-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Canvas.Left="5894" Canvas.Top="1214" Width="292" Color="Water" StatusComponent="529-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -276,9 +276,9 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Canvas.Left="6038" Canvas.Top="920" Width="235" Color="Water" StatusComponent="529-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Canvas.Left="6038" Canvas.Top="1070" Width="527" Color="Water" StatusComponent="529-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Canvas.Left="4746" Canvas.Top="1453" Width="277" Color="Water" StatusComponent="529-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Canvas.Left="4625" Canvas.Top="1847" Width="791" Color="Water" StatusComponent="470-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+    <Labels:Pipe Canvas.Left="4551" Canvas.Top="1921" Width="939" Color="Water" StatusComponent="470-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -288,17 +288,18 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
+    <Labels:Pipe Canvas.Left="7825" Canvas.Top="1728" PipeHeight="Medium" Width="130" StatusComponent="544-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <local:P020 Canvas.Left="54" Canvas.Top="331" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
 
-    <local:P230 Canvas.Left="1206" Canvas.Top="928" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-    <local:P288 Canvas.Left="2600" Canvas.Top="1861" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-    <local:P430 Canvas.Left="2858" Canvas.Top="240" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-    <local:P450 Canvas.Left="3581" Canvas.Top="1107" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-    <local:P464 Canvas.Left="4997" Canvas.Top="34" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-    <local:P474 Canvas.Left="4995" Canvas.Top="1353" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-    <local:P510 Canvas.Left="6120" Canvas.Top="662" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-    <local:P520 Canvas.Left="6118" Canvas.Top="1981" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-    <local:P570 Canvas.Left="7736" Canvas.Top="1596" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+    <local:P230 d:CacheMode="BitmapCache" Canvas.Left="1206" Canvas.Top="928" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+    <local:P288 d:CacheMode="BitmapCache" Canvas.Left="2600" Canvas.Top="1861" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+    <local:P430 d:CacheMode="BitmapCache" Canvas.Left="2858" Canvas.Top="240" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+    <local:P450 d:CacheMode="BitmapCache" Canvas.Left="3581" Canvas.Top="1107" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+    <local:P464 d:CacheMode="BitmapCache" Canvas.Left="4997" Canvas.Top="34" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+    <local:P474 d:CacheMode="BitmapCache" Canvas.Left="4995" Canvas.Top="1353" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+    <local:P510 d:CacheMode="BitmapCache" Canvas.Left="6235" Canvas.Top="692" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+    <local:P520 d:CacheMode="BitmapCache" Canvas.Left="6233" Canvas.Top="2011" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+    <local:P570 d:CacheMode="BitmapCache" Canvas.Left="7736" Canvas.Top="1596" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
 
   </Canvas>
 </UserControl>
