--- a/Prevu.Synoptics.V3085_Anviplas/P450.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P450.xaml
@@ -247,11 +247,11 @@
       JumpFromLabel="529-01-MA1" 
       JumpToLabel="520-23-CV1" Canvas.Left="1109" Canvas.Top="312" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
-      ComponentName="528-41-LT1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="1281" Canvas.Top="520" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+      ComponentName="528-41-LT1"  Canvas.Left="1281" Canvas.Top="520" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
-      ComponentName="529-01-MA1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="1169" Canvas.Top="583" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+      ComponentName="529-01-MA1"  Canvas.Left="1169" Canvas.Top="583" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel 
-      ComponentName="528-21-CV1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="1316" Canvas.Top="397" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+      ComponentName="528-21-CV1"  Canvas.Left="1316" Canvas.Top="397" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Width="72" Color="Water" StatusComponent="529-01-MA1" VisibilityComponent="" Canvas.Left="1058" Canvas.Top="251" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:JumpLabel 
       JumpFromLabel="529-01-MA1" 
