--- a/Prevu.Synoptics.V2911_Flex/Pages/P288.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Pages/P288.xaml
@@ -247,7 +247,7 @@
         <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             JumpFromLabel="293-01-MA1" 
-            JumpToLabel="100-01-MA1" Canvas.Left="1384" Canvas.Top="642"/>
+            JumpToLabel="110-41-LT1" Canvas.Left="1384" Canvas.Top="642"/>
         <Labels:JumpLabel 
             JumpFromLabel="292-01-MA1" 
             JumpToLabel="232-01-MA1" Canvas.Left="1384" Canvas.Top="492" HorizontalAlignment="Center" VerticalAlignment="Top"/>
