V3085: update 511/521 level details

--- a/Prevu.Synoptics.V3085_Anviplas/D511.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/D511.xaml
@@ -9,16 +9,11 @@
              xmlns:Pits="clr-namespace:Prevu.Drawings.Machines.Pits;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.D511" 
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
-  <Canvas Height="319" Width="445">
+  <Canvas Height="319" Width="320">
     <Machines:V01_SLX_Silo_wAgitator Canvas.Left="14" Canvas.Top="5" Height="310" Width="226" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-    <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="511-61-LSHA" SignalName="LSH" Canvas.Left="139" Canvas.Top="34"/>
-    <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="511-61-LSH" SignalName="LSH" Canvas.Left="139" Canvas.Top="90" />
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-		VerticalAlignment="Top" 
-		ComponentName="511-01-MA1" Canvas.Left="85" Canvas.Top="200"/>
+    <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="511-61-LEV" SignalName="LSHA" Canvas.Left="43" Canvas.Top="26"/>
+    <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="511-61-LEV" SignalName="LSH" Canvas.Left="43" Canvas.Top="82" />
     <Labels:DeviceLabel 
-      ComponentName="511-61-LSHA" Canvas.Left="45" Canvas.Top="25" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-    <Labels:DeviceLabel 
-      ComponentName="511-61-LSH" Canvas.Left="45" Canvas.Top="81" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+      ComponentName="511-61-LEV" Canvas.Left="85" Canvas.Top="145" HorizontalAlignment="Left" VerticalAlignment="Top"/>
   </Canvas>
 </UserControl>
