--- a/Prevu.Synoptics.V3085_Anviplas/P464.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P464.xaml
@@ -10,7 +10,7 @@
              x:Class="Prevu.Synoptics.P464" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="310" StatusComponent="464-04-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="866" Canvas.Top="707"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="310" StatusComponent="480-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="866" Canvas.Top="707"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="108" StatusComponent="482-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="1210" Canvas.Top="701"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="62" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="482-21-CV1" Canvas.Left="1162" Canvas.Top="656">
             <Labels:Pipe.RenderTransform>
@@ -144,5 +144,8 @@
             ComponentName="464-41-PT1" Canvas.Left="975" Canvas.Top="217"/>
         <Labels:DeviceLabel 
             ComponentName="464-61-LEV" Canvas.Left="790" Canvas.Top="262" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:SCW_ScrewConveyor_straight Canvas.Left="854" Canvas.Top="701"/>
+        <Labels:DeviceLabel 
+            ComponentName="480-01-MA1" Canvas.Left="854" Canvas.Top="726" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
