--- a/Prevu.Synoptics.V3085_Anviplas/P474.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P474.xaml
@@ -133,5 +133,7 @@
         <Machines:SCW_ScrewConveyor_straight Canvas.Left="854" Canvas.Top="701" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
             ComponentName="490-01-MA1" Canvas.Left="854" Canvas.Top="726" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-    </Canvas>
+    <Labels:DeviceLabel 
+          ComponentName="474-20-VB1" Canvas.Left="1140" Canvas.Top="344" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+  </Canvas>
 </UserControl>
