V2911  mods on P and D

--- a/Prevu.Synoptics.V2911_Flex/Details/D140.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Details/D140.xaml
@@ -20,7 +20,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="46" StatusComponent="140-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="339" Canvas.Top="203" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="46" StatusComponent="140-01-EC1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="339" Canvas.Top="203" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -30,7 +30,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="42" StatusComponent="140-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="269" Canvas.Top="207" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct">
+        <Labels:Pipe Width="42" StatusComponent="140-01-EC1" RenderTransformOrigin="0.5,0.5" Canvas.Left="269" Canvas.Top="207" HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
