--- a/Prevu.Synoptics.V2911_Flex/Details/D883.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Details/D883.xaml
@@ -21,7 +21,7 @@
             </Machines:V01_SCW_DETAIL_Flex_Verticale_DX.RenderTransform>
         </Machines:V01_SCW_DETAIL_Flex_Verticale_DX>
         <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="883-61-LEV" SignalName="LSH" FlowDirection="LeftToRight" Canvas.Left="59" Canvas.Top="181"/>
-        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="883-61-LEV" SignalName="LSL" FlowDirection="LeftToRight" Canvas.Left="122" Canvas.Top="257" />
+        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="883-61-LEV" SignalName="LSLA" FlowDirection="LeftToRight" Canvas.Left="122" Canvas.Top="257" />
         <Labels:DeviceLabel HorizontalAlignment="Left" 
          VerticalAlignment="Top" 
          ComponentName="883-61-LEV" Canvas.Left="59" Canvas.Top="90"/>
