--- a/Prevu.Synoptics.V2911_Flex/Details/D885.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Details/D885.xaml
@@ -13,7 +13,7 @@
     <Canvas Height="448" Width="498">
         <Machines:V01_SCW_DETAIL_Flex_Verticale_DX Canvas.Left="10" Canvas.Top="10" Height="428" Width="478" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5"/>
         <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="885-61-LEV" SignalName="LSH" FlowDirection="RightToLeft" Canvas.Left="313" Canvas.Top="179"/>
-        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="885-61-LEV" SignalName="LSL" FlowDirection="RightToLeft" Canvas.Left="250" Canvas.Top="255" />
+        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="885-61-LEV" SignalName="LSLA" FlowDirection="RightToLeft" Canvas.Left="250" Canvas.Top="255" />
         <Labels:DeviceLabel HorizontalAlignment="Left" 
          VerticalAlignment="Top" 
          ComponentName="885-61-LEV" Canvas.Left="342" Canvas.Top="90"/>
