--- a/Prevu.Synoptics.V2911_Flex/Pages/P100.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Pages/P100.xaml
@@ -76,7 +76,7 @@
     </Labels:Pipe>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="306" Color="Water" StatusComponent="119-01-MA1" Canvas.Left="130" Canvas.Top="658"/>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="367" Color="Water" StatusComponent="113-01-MA1" Canvas.Left="72" Canvas.Top="727" Height="7"/>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="284" Color="Water" StatusComponent="117-01-MA1" Canvas.Left="629" Canvas.Top="728"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="284" Color="Water" StatusComponent="117-01-MA1" Canvas.Left="628" Canvas.Top="728"/>
     <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="66" StatusComponent="127-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1340" Canvas.Top="657">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -293,7 +293,7 @@
         </TransformGroup>
       </Machines:WaterPump.RenderTransform>
     </Machines:WaterPump>
-    <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="44" Width="44" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="797" Canvas.Top="708">
+    <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="44" Width="44" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="772" Canvas.Top="708">
       <Machines:WaterPump.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="-1"/>
@@ -374,18 +374,18 @@
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Center" 
             ComponentName="113-01-MA1" Canvas.Left="156" Canvas.Top="760"/>
-    <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Center" 
-            ComponentName="117-01-MA1" Canvas.Left="775" Canvas.Top="760"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Top" 
-            ComponentName="117-71-ECS1" Canvas.Left="920" Canvas.Top="705"/>
+            VerticalAlignment="Center" 
+            ComponentName="117-01-MA1" Canvas.Left="750" Canvas.Top="760"/>
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="117-71-ECS1" Canvas.Left="924" Canvas.Top="705"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="100-01-MA1" Canvas.Left="750" Canvas.Top="107"/>
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="119-01-MA1" Canvas.Left="200" Canvas.Top="583"/>
+            ComponentName="119-01-MA1" Canvas.Left="200" Canvas.Top="581"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Top" 
             ComponentName="106-01-MA1" Canvas.Left="814" Canvas.Top="371"/>
@@ -407,7 +407,7 @@
     <Labels:DeviceLabel 
             ComponentName="100-41-LT1" Canvas.Left="584" Canvas.Top="33" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
-            ComponentName="100-23-CV1" Canvas.Left="968" Canvas.Top="177" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            ComponentName="100-23-CV1" Canvas.Left="967" Canvas.Top="177" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
             ComponentName="110-41-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="442" Canvas.Top="665" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:DeviceLabel.RenderTransform>
