V2911: Fix Assegnazione componenti a tubazioni

--- a/Prevu.Synoptics.V2911_Flex/Pages/P230.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Pages/P230.xaml
@@ -47,7 +47,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" StatusComponent="170-01-MA1" PipeHeight="Medium" Canvas.Left="143" Canvas.Top="85"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Width="130" StatusComponent="170-01-MA1" PipeHeight="Medium" Canvas.Left="143" Canvas.Top="85" VisibilitySignal="LS2" VisibilityComponent="170-21-CV1"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="72" StatusComponent="232-01-MA1" PipeHeight="Medium" Canvas.Left="487" Canvas.Top="587">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
