--- a/Prevu.Synoptics.V2911_Flex/Pages/P330.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Pages/P330.xaml
@@ -90,7 +90,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="402" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="18" VisibilityComponent="324-21-CV1" VisibilitySignal="LS1" Canvas.Left="702" Canvas.Top="341" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="402" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="18" Canvas.Left="702" Canvas.Top="341" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="DirectionOne">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -110,8 +110,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="141" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="21" Canvas.Left="1165" Canvas.Top="143" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="324-21-CV1" VisibilitySignal="LS2"/>
-        <Labels:Pipe Width="282" StatusComponent="324-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="22" Canvas.Left="1160" Canvas.Top="283" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="324-21-CV1" VisibilitySignal="LS2">
+        <Labels:Pipe Width="141" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="21" Canvas.Left="1165" Canvas.Top="143" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="DirectionTwo"/>
+        <Labels:Pipe Width="282" StatusComponent="324-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="22" Canvas.Left="1160" Canvas.Top="283" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="DirectionTwo">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
