--- a/Prevu.Synoptics.V2911_Flex/Details/D880.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Details/D880.xaml
@@ -9,20 +9,18 @@
              xmlns:Separation="clr-namespace:Prevu.Drawings.Machines.Separation;assembly=Prevu.Drawings" xmlns:FlakesSorting="clr-namespace:Prevu.Drawings.Machines.FlakesSorting;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.D880" 
              mc:Ignorable="d" 
               d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas Height="460" Width="452">
-        <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="10" Canvas.Top="40" Height="414" Width="435" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="890-61-LEV" SignalName="LSHA1" Canvas.Left="45" Canvas.Top="16"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="890-61-LEV" SignalName="LSH" Canvas.Left="45" Canvas.Top="115" />
-        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Center" ComponentName="890-61-LEV" SignalName="LSL" Canvas.Left="59" Canvas.Top="200"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="890-61-LEV" SignalName="LSHA" Canvas.Left="257" Canvas.Top="44"/>
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="890-61-LEV" SignalName="LSH" Canvas.Left="257" Canvas.Top="115" />
-        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="890-61-LEV" SignalName="LSL" Canvas.Left="271" Canvas.Top="200"/>
-        <Labels:SignalLabel FlowDirection="RightToLeft" ComponentName="890-61-LEV" SignalName="LSHA2" Canvas.Left="41" Canvas.Top="52" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
+  <Canvas Height="460" Width="452">
+    <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="10" Canvas.Top="40" Height="414" Width="435" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="890-61-LEV" SignalName="LSHA1" Canvas.Left="45" Canvas.Top="16"/>
+    <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="890-61-LEV" SignalName="LSH" Canvas.Left="45" Canvas.Top="143" />
+    <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="890-61-LEV" SignalName="LSHA" Canvas.Left="257" Canvas.Top="44"/>
+    <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="890-61-LEV" SignalName="LSH" Canvas.Left="257" Canvas.Top="142" />
+    <Labels:SignalLabel FlowDirection="RightToLeft" ComponentName="890-61-LEV" SignalName="LSHA2" Canvas.Left="41" Canvas.Top="52" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
          VerticalAlignment="Top" 
          ComponentName="880-61-LEV" Canvas.Left="77" Canvas.Top="249"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="880-62-LEV" Canvas.Left="285" Canvas.Top="249"/>
-    </Canvas>
+  </Canvas>
 </UserControl>
