--- a/Prevu.Synoptics.V2911_Flex/Pages/P460.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Pages/P460.xaml
@@ -8,150 +8,150 @@
              xmlns:Blowers="clr-namespace:Prevu.Drawings.Machines.Blowers;assembly=Prevu.Drawings" 
              x:Class="Prevu.Synoptics.P460" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas>
-        <Labels:Pipe Width="248" StatusComponent="455-01-MA1" PipeHeight="Medium" Canvas.Left="142" Canvas.Top="168" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="180" RenderTransformOrigin="0.5,0.5" StatusComponent="470-21-CV1" Canvas.Left="548" Canvas.Top="594">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="228" StatusComponent="470-21-CV1" Canvas.Left="412" Canvas.Top="506"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="429" Color="Water" StatusComponent="473-01-MA1" Canvas.Left="242" Canvas.Top="746"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Width="543" Color="Water" StatusComponent="473-01-MA1" Canvas.Left="246" Canvas.Top="208">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="87" RenderTransformOrigin="0.5,0.5" StatusComponent="464-01-MA1" VisibilityComponent="" Canvas.Left="694" Canvas.Top="325"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="366" RenderTransformOrigin="0.5,0.5" StatusComponent="464-01-MA1" VisibilityComponent="" Canvas.Left="513" Canvas.Top="506">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="211" Color="Water" StatusComponent="477-01-MA1" Canvas.Left="810" Canvas.Top="733"/>
-        <Labels:Pipe Width="240" StatusComponent="462-01-MA1" PipeHeight="Medium" Canvas.Left="580" Canvas.Top="168" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="139" Color="Water" StatusComponent="473-01-MA1" Canvas.Left="241" Canvas.Top="208" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="150" StatusComponent="462-01-MA1" PipeHeight="Medium" Canvas.Left="740" Canvas.Top="238" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="127" StatusComponent="526-01-MA1" PipeHeight="Medium" Canvas.Left="1264" Canvas.Top="186" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="190" StatusComponent="464-01-MA1" PipeHeight="Medium" Canvas.Left="855" Canvas.Top="346" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Color="Vapor" Width="72" RenderTransformOrigin="0.5,0.5" StatusComponent="450-22-CV1" Canvas.Left="572" Canvas.Top="651" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Color="Vapor" Width="97" StatusComponent="450-22-CV1" Canvas.Left="513" Canvas.Top="617" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Rectangle Height="55" Canvas.Left="1088" Canvas.Top="172" Width="75" Fill="#FF8A8A8A" RadiusX="10" RadiusY="10" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Rectangle HorizontalAlignment="Left" Height="35" Stroke="Black" VerticalAlignment="Center" Width="2" Canvas.Left="504" Canvas.Top="476"/>
-        <Ellipse HorizontalAlignment="Left" Height="16" Stroke="#FFBDBDBD" VerticalAlignment="Center" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="497" Canvas.Top="500"/>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="349" Canvas.Top="458">
-            <Machines:CV_Valve_001.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform X="-0.5" Y="-1.95"/>
-                </TransformGroup>
-            </Machines:CV_Valve_001.RenderTransform>
-        </Machines:CV_Valve_001>
-        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="45" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="886" Canvas.Top="713"/>
-        <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Center" Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="482" Canvas.Top="728">
-            <Machines:WaterPump.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:WaterPump.RenderTransform>
-        </Machines:WaterPump>
-        <Machines:STR_Washing_reactor_B Height="217" Width="170" Canvas.Left="320" Canvas.Top="113" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:STR_Washing_reactor_B Height="217" Width="170" Canvas.Left="442" Canvas.Top="113" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:V01_VB_VibratingScreen Canvas.Left="755" Canvas.Top="310" Height="145" Width="145" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_VRC_WaterTank Canvas.Left="580" Canvas.Top="671" Height="133" Width="244" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="470-41-LT1" TrendName="LEVEL"/>
-        <Machines:V01_DCE_Centrifuge Canvas.Left="1140" Canvas.Top="171" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:SCW_ScrewConveyor_straight RenderTransformOrigin="0.5,0.5" Width="118" Height="18" Canvas.Left="1028" Canvas.Top="340" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1094" Canvas.Top="178" Height="44" Width="43" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5"/>
-        <Machines:CV_Valve_001 Height="100" Width="100" Color="Steam" RenderTransformOrigin="0.51,0.539" Canvas.Left="455" Canvas.Top="569" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Machines:CV_Valve_001.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform X="-0.5" Y="-1.95"/>
-                </TransformGroup>
-            </Machines:CV_Valve_001.RenderTransform>
-        </Machines:CV_Valve_001>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
+  <Canvas>
+    <Labels:Pipe Width="248" StatusComponent="455-01-MA1" PipeHeight="Medium" Canvas.Left="142" Canvas.Top="168" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="180" RenderTransformOrigin="0.5,0.5" StatusComponent="470-21-CV1" Canvas.Left="548" Canvas.Top="594">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="228" StatusComponent="470-21-CV1" Canvas.Left="412" Canvas.Top="506"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="429" Color="Water" StatusComponent="473-01-MA1" Canvas.Left="242" Canvas.Top="746"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Width="543" Color="Water" StatusComponent="473-01-MA1" Canvas.Left="246" Canvas.Top="208">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="87" RenderTransformOrigin="0.5,0.5" StatusComponent="464-01-MA1" VisibilityComponent="" Canvas.Left="702" Canvas.Top="325"/>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="366" RenderTransformOrigin="0.5,0.5" StatusComponent="464-01-MA1" VisibilityComponent="" Canvas.Left="521" Canvas.Top="506">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="211" Color="Water" StatusComponent="477-01-MA1" Canvas.Left="810" Canvas.Top="733"/>
+    <Labels:Pipe Width="252" StatusComponent="462-01-MA1" PipeHeight="Medium" Canvas.Left="580" Canvas.Top="168" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="139" Color="Water" StatusComponent="473-01-MA1" Canvas.Left="241" Canvas.Top="208" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="150" StatusComponent="462-01-MA1" PipeHeight="Medium" Canvas.Left="752" Canvas.Top="238" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Width="127" StatusComponent="526-01-MA1" PipeHeight="Medium" Canvas.Left="1264" Canvas.Top="186" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="190" StatusComponent="464-01-MA1" PipeHeight="Medium" Canvas.Left="855" Canvas.Top="346" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Color="Vapor" Width="72" RenderTransformOrigin="0.5,0.5" StatusComponent="450-22-CV1" Canvas.Left="572" Canvas.Top="651" HorizontalAlignment="Center" VerticalAlignment="Top">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Color="Vapor" Width="97" StatusComponent="450-22-CV1" Canvas.Left="513" Canvas.Top="617" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Rectangle Height="55" Canvas.Left="1088" Canvas.Top="172" Width="75" Fill="#FF8A8A8A" RadiusX="10" RadiusY="10" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Rectangle HorizontalAlignment="Left" Height="35" Stroke="Black" VerticalAlignment="Center" Width="2" Canvas.Left="504" Canvas.Top="476"/>
+    <Ellipse HorizontalAlignment="Left" Height="16" Stroke="#FFBDBDBD" VerticalAlignment="Center" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="497" Canvas.Top="500"/>
+    <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="349" Canvas.Top="458">
+      <Machines:CV_Valve_001.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
+          <SkewTransform/>
+          <RotateTransform/>
+          <TranslateTransform X="-0.5" Y="-1.95"/>
+        </TransformGroup>
+      </Machines:CV_Valve_001.RenderTransform>
+    </Machines:CV_Valve_001>
+    <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="45" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="886" Canvas.Top="713"/>
+    <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Center" Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="482" Canvas.Top="728">
+      <Machines:WaterPump.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform ScaleX="-1"/>
+          <SkewTransform/>
+          <RotateTransform/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Machines:WaterPump.RenderTransform>
+    </Machines:WaterPump>
+    <Machines:STR_Washing_reactor_B Height="217" Width="170" Canvas.Left="320" Canvas.Top="113" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:STR_Washing_reactor_B Height="217" Width="170" Canvas.Left="442" Canvas.Top="113" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_VB_VibratingScreen Canvas.Left="755" Canvas.Top="310" Height="145" Width="145" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_VRC_WaterTank Canvas.Left="580" Canvas.Top="671" Height="133" Width="244" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="470-41-LT1" TrendName="LEVEL"/>
+    <Machines:V01_DCE_Centrifuge Canvas.Left="1140" Canvas.Top="171" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:SCW_ScrewConveyor_straight RenderTransformOrigin="0.5,0.5" Width="118" Height="18" Canvas.Left="1028" Canvas.Top="340" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1094" Canvas.Top="178" Height="44" Width="43" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5"/>
+    <Machines:CV_Valve_001 Height="100" Width="100" Color="Steam" RenderTransformOrigin="0.51,0.539" Canvas.Left="455" Canvas.Top="569" HorizontalAlignment="Center" VerticalAlignment="Top">
+      <Machines:CV_Valve_001.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform ScaleX="-0.5" ScaleY="0.5"/>
+          <SkewTransform/>
+          <RotateTransform/>
+          <TranslateTransform X="-0.5" Y="-1.95"/>
+        </TransformGroup>
+      </Machines:CV_Valve_001.RenderTransform>
+    </Machines:CV_Valve_001>
+    <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             JumpFromLabel="460-01-MA1" 
             JumpToLabel="455-01-MA1" Canvas.Left="69" Canvas.Top="138"/>
-        <Labels:JumpLabel 
+    <Labels:JumpLabel 
             JumpFromLabel="477-01-MA1" 
             JumpToLabel="283-01-MA1" Canvas.Left="1000" Canvas.Top="701" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel 
+    <Labels:JumpLabel 
             JumpFromLabel="526-01-MA1" 
             JumpToLabel="530-01-MA1" Canvas.Left="1370" Canvas.Top="156" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="470-44-FT1" Canvas.Left="460" Canvas.Top="438"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="470-42-TT1" Canvas.Left="712" Canvas.Top="709"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="470-41-LT1" Canvas.Left="602" Canvas.Top="709"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="470-21-CV1" Canvas.Left="354" Canvas.Top="438"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Center" 
             ComponentName="473-01-MA1" Canvas.Left="460" Canvas.Top="671"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="477-01-MA1" Canvas.Left="864" Canvas.Top="656"/>
-        <Labels:DeviceLabel 
+    <Labels:DeviceLabel 
             ComponentName="460-01-MA1" Canvas.Left="360" Canvas.Top="69" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
+    <Labels:DeviceLabel 
             ComponentName="462-01-MA1" Canvas.Left="482" Canvas.Top="69" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
+    <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Top" 
             ComponentName="464-01-MA1" Canvas.Left="782" Canvas.Top="391"/>
-        <Labels:DeviceLabel 
-      ComponentName="524-01-MA1" Canvas.Left="1040" Canvas.Top="365" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel 
-      ComponentName="526-01-MA1" Canvas.Left="1161" Canvas.Top="115" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel 
-      ComponentName="526-02-MA1" Canvas.Left="995" Canvas.Top="175" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel 
+    <Labels:DeviceLabel 
+      ComponentName="524-01-MA1" Canvas.Left="1028" Canvas.Top="367" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel 
+      ComponentName="526-01-MA1" Canvas.Left="1161" Canvas.Top="113" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel 
+      ComponentName="526-02-MA1" Canvas.Left="991" Canvas.Top="175" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel 
       ComponentName="470-22-CV1" Canvas.Left="460" Canvas.Top="549" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    </Canvas>
+  </Canvas>
 </UserControl>
