--- a/Prevu.Synoptics.V2911_Flex/Details/D330.xaml
+++ b/Prevu.Synoptics.V2911_Flex/Details/D330.xaml
@@ -12,7 +12,7 @@
     <Canvas Height="550" Width="620">
         <Labels:Pipe Width="68" StatusComponent="331-01-MA1" PipeHeight="Medium" Canvas.Left="515" Canvas.Top="403" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="114" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="332-21-CV1" Canvas.Left="100" Canvas.Top="255" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="188" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="18" VisibilityComponent="324-21-CV1" VisibilitySignal="LS1" Canvas.Left="227" Canvas.Top="128" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="188" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="18" VisibilityComponent="" VisibilitySignal="" Canvas.Left="227" Canvas.Top="128" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="DirectionOne">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
